# freqtrade-research

crypto_research_bot/: .env.example  README.md  pyproject.toml
crypto_research_bot/configs/: app.yaml  logging.yaml
crypto_research_bot/docs/: architecture.md  cli-usage.md  frontend-usage.md  strategy-json-spec.md
crypto_research_bot/src/app/: cli.py  web.py
crypto_research_bot/src/app/static/: app.js  index.html  styles.css
crypto_research_bot/src/compiler/: config_compiler.py  indicator_compiler.py  protection_compiler.py  signal_compiler.py  strategy_compiler.py  template_renderer.py
crypto_research_bot/src/domain/models/: enums.py  errors.py  (+1 more)
crypto_research_bot/src/dsl/: parser.py  semantic_validator.py  validator.py
crypto_research_bot/src/evaluation/: acceptance.py  metrics.py  regime_split.py  robustness.py  sensitivity.py  walk_forward.py
crypto_research_bot/src/features/: aligner.py  lag_guard.py  loader.py  merger.py  schemas.py
crypto_research_bot/src/freqtrade_adapter/: analysis_runner.py  backtest_runner.py  commands.py  data_downloader.py  hyperopt_runner.py
crypto_research_bot/src/reporting/: json_report.py  manifest_writer.py  markdown_report.py
crypto_research_bot/src/utils/: hashing.py  io.py  logging.py  paths.py  subprocess.py  time.py
crypto_research_bot/strategies/example_trend/: notes.md  strategy.json
crypto_research_bot/templates/: trend_futures.json
crypto_research_bot/tests/integration/: test_pipeline.py
crypto_research_bot/tests/unit/: test_compiler.py  test_semantic_validator.py  test_validator.py  test_web.py
(+3 files in other folders)
