[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-research-bot"
version = "0.1.0"
description = "JSON-driven Freqtrade research pipeline for OKX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "jsonschema>=4.22",
  "typer>=0.12",
  "jinja2>=3.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
